// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Polymorphism > forcing implicits 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_9;
  return v0;
}

function closure_10(x) {
  return x;
}

function closure_9(a) {
  const v0 = closure_10;
  return v0;
}
return main();
",
    "elaborated": "λ(a: Type) => λ(x: a) -> x",
    "gram": "[1] root
  :entry -> [2]
[2] lambda {"variable":"a","icit":"Implicit","level":0}
  :annotation -> [3]
  :body -> [4]
  :env -> [7]
[3] lit {"value":{"type":"Atom","value":"Type"}}
[4] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
  :env -> [8]
[5] var:bound {"index":0}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
[6] var:bound {"index":0}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
[7] env
[8] env
[9] closure
  :body -> [2]
  :env -> [7]
[10] closure
  :body -> [4]
  :env -> [8]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_9
      return v0
  fn closure_10(x) entry=entry
    entry:
      return x
  fn closure_9(a) entry=entry
    entry:
      let v0 = &closure_10
      return v0",
    "name": "id",
    "normalized": "λ(a: Type) => (closure: λ(x: a) -> x -| Γ: a)",
    "type": "Π(a: Type) => Π(t1: a) -> a",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = unknown;
  const v2 = v0(v1);
  const v3 = "hello";
  const v4 = v2(v3);
  return v4;
}
return main();
",
    "elaborated": "id @String "hello"",
    "gram": "[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [3]
[3] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [5]
[4] var:free {"name":"id"}
[5] var:ref {"name":"id"}
  :refers_to -> [4]
[6] var:free {"name":"String"}
[7] var:ref {"name":"String"}
  :refers_to -> [6]
[8] lit {"value":{"type":"String","value":"hello"}}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unknown
      let v1 = unknown
      let v2 = call *v0(v1)
      let v3 = "hello"
      let v4 = call *v2(v3)
      return v4",
    "name": "forcedStr",
    "normalized": ""hello"",
    "type": "String",
  },
]
`;

exports[`Language Tour — Polymorphism > implicit parameters 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_9;
  return v0;
}

function closure_10(x) {
  return x;
}

function closure_9(a) {
  const v0 = closure_10;
  return v0;
}
return main();
",
    "elaborated": "λ(a: Type) => λ(x: a) -> x",
    "gram": "[1] root
  :entry -> [2]
[2] lambda {"variable":"a","icit":"Implicit","level":0}
  :annotation -> [3]
  :body -> [4]
  :env -> [7]
[3] lit {"value":{"type":"Atom","value":"Type"}}
[4] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
  :env -> [8]
[5] var:bound {"index":0}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
[6] var:bound {"index":0}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
[7] env
[8] env
[9] closure
  :body -> [2]
  :env -> [7]
[10] closure
  :body -> [4]
  :env -> [8]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_9
      return v0
  fn closure_10(x) entry=entry
    entry:
      return x
  fn closure_9(a) entry=entry
    entry:
      let v0 = &closure_10
      return v0",
    "name": "id",
    "normalized": "λ(a: Type) => (closure: λ(x: a) -> x -| Γ: a)",
    "type": "Π(a: Type) => Π(t1: a) -> a",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = "Num";
  const v2 = v0(v1);
  const v3 = 42;
  const v4 = v2(v3);
  return v4;
}
return main();
",
    "elaborated": "id @Num 42",
    "gram": "[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [3]
[3] app {"icit":"Implicit"}
  :arg -> [6]
  :func -> [5]
[4] var:free {"name":"id"}
[5] var:ref {"name":"id"}
  :refers_to -> [4]
[6] lit {"value":{"type":"Atom","value":"Num"}}
[7] lit {"value":{"type":"Num","value":42}}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unknown
      let v1 = Num
      let v2 = call *v0(v1)
      let v3 = 42
      let v4 = call *v2(v3)
      return v4",
    "name": "n2",
    "normalized": "42",
    "type": "Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = "String";
  const v2 = v0(v1);
  const v3 = "hello";
  const v4 = v2(v3);
  return v4;
}
return main();
",
    "elaborated": "id @String "hello"",
    "gram": "[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [3]
[3] app {"icit":"Implicit"}
  :arg -> [6]
  :func -> [5]
[4] var:free {"name":"id"}
[5] var:ref {"name":"id"}
  :refers_to -> [4]
[6] lit {"value":{"type":"Atom","value":"String"}}
[7] lit {"value":{"type":"String","value":"hello"}}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unknown
      let v1 = String
      let v2 = call *v0(v1)
      let v3 = "hello"
      let v4 = call *v2(v3)
      return v4",
    "name": "s2",
    "normalized": ""hello"",
    "type": "String",
  },
]
`;

exports[`Language Tour — Polymorphism > implicit resolution with using 1`] = `
[
  {
    "codegenJS": "",
    "elaborated": "λ(n: Num) => λ(x: Num) -> FFI.$add x n",
    "error": "Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures",
    "gram": "[1] root
  :entry -> [2]
[2] lambda {"variable":"n","icit":"Implicit","level":0}
  :annotation -> [3]
  :body -> [4]
  :env -> [13]
[3] lit {"value":{"type":"Atom","value":"Num"}}
[4] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [12]
  :env -> [14]
[5] lit {"value":{"type":"Atom","value":"Num"}}
[8] var:foreign {"name":"$add","arity":2}
[10] var:bound {"index":0}
  :next -> [11]
  :refers_to -> [4]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
[11] var:bound {"index":1}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
[12] primop {"op":"$add"}
  :arg -> [10] {"index":0}
  :arg -> [11] {"index":1}
  :callee -> [8]
[13] env
[14] env
  :capture -> [2] {"index":0}
[15] closure
  :body -> [2]
  :env -> [13]
[16] closure
  :body -> [4]
  :env -> [14]",
    "kind": "let",
    "mir": "",
    "name": "addImplicit",
    "normalized": "λ(n: Num) => (closure: λ(x: Num) -> FFI.$add x n -| Γ: n)",
    "type": "Π(n: Num) => Π(t1: Num) -> Num",
  },
  {
    "kind": "using",
    "name": "(using)",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = 10;
  const v2 = v0(v1);
  const v3 = 1;
  const v4 = v2(v3);
  return v4;
}
return main();
",
    "elaborated": "addImplicit @10 1",
    "gram": "[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [3]
[3] app {"icit":"Implicit"}
  :arg -> [6]
  :func -> [5]
[4] var:free {"name":"addImplicit"}
[5] var:ref {"name":"addImplicit"}
  :refers_to -> [4]
[6] lit {"value":{"type":"Num","value":10}}
[7] lit {"value":{"type":"Num","value":1}}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unknown
      let v1 = 10
      let v2 = call *v0(v1)
      let v3 = 1
      let v4 = call *v2(v3)
      return v4",
    "name": "eleven",
    "normalized": "11",
    "type": "Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  const v1 = 10;
  const v2 = v0(v1);
  const v3 = 5;
  const v4 = v2(v3);
  return v4;
}
return main();
",
    "elaborated": "addImplicit @10 5",
    "gram": "[1] root
  :entry -> [2]
[2] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [3]
[3] app {"icit":"Implicit"}
  :arg -> [6]
  :func -> [5]
[4] var:free {"name":"addImplicit"}
[5] var:ref {"name":"addImplicit"}
  :refers_to -> [4]
[6] lit {"value":{"type":"Num","value":10}}
[7] lit {"value":{"type":"Num","value":5}}",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unknown
      let v1 = 10
      let v2 = call *v0(v1)
      let v3 = 5
      let v4 = call *v2(v3)
      return v4",
    "name": "fifteen",
    "normalized": "15",
    "type": "Num",
  },
]
`;

exports[`Language Tour — Polymorphism > inference and generalization 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_12;
  return v0;
}

function closure_12(x) {
  const v0 = 1;
  const v1 = (x + v0);
  return v1;
}
return main();
",
    "elaborated": "(λ(x: Num) -> FFI.$add x 1 : Π(x: Num) -> (closure: Num -| Γ: x; inc))",
    "gram": "[1] root
  :entry -> [2]
[2] lambda {"variable":"x","icit":"Explicit","level":0}
  :annotation -> [3]
  :body -> [10]
  :env -> [11]
[3] lit {"value":{"type":"Atom","value":"Num"}}
[6] var:foreign {"name":"$add","arity":2}
[8] var:bound {"index":0}
  :next -> [9]
  :refers_to -> [2]
  :scope -> [2] {"level":0}
[9] lit {"value":{"type":"Num","value":1}}
[10] primop {"op":"$add"}
  :arg -> [8] {"index":0}
  :arg -> [9] {"index":1}
  :callee -> [6]
[11] env
[12] closure
  :body -> [2]
  :env -> [11]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_12
      return v0
  fn closure_12(x) entry=entry
    entry:
      let v0 = 1
      let v1 = +(x, v0)
      return v1",
    "name": "inc",
    "normalized": "λ(x: Num) -> (closure: FFI.$add x 1 -| Γ: x)",
    "type": "Π(x: Num) -> Num",
  },
  {
    "codegenJS": "",
    "elaborated": "λ(a: Type) =>
  λ(b: Type) =>
    (λ(x: a) ->
      (λ(y: b) -> x : Π(y: x) -> (closure: x -| Γ: y; x; fst)) : Π(x: b) ->
      (closure: Π(y: L2) -> x -| Γ: x; fst))",
    "error": "Rigid variables do not match in subtype; Rigid variables do not match in subtype; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures",
    "gram": "[1] root
  :entry -> [2]
[2] lambda {"variable":"a","icit":"Implicit","level":0}
  :annotation -> [3]
  :body -> [4]
  :env -> [11]
[3] lit {"value":{"type":"Atom","value":"Type"}}
[4] lambda {"variable":"b","icit":"Implicit","level":1}
  :annotation -> [5]
  :body -> [6]
  :env -> [12]
[5] lit {"value":{"type":"Atom","value":"Type"}}
[6] lambda {"variable":"x","icit":"Explicit","level":2}
  :annotation -> [7]
  :body -> [8]
  :env -> [13]
[7] var:bound {"index":1}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
[8] lambda {"variable":"y","icit":"Explicit","level":3}
  :annotation -> [9]
  :body -> [10]
  :env -> [14]
[9] var:bound {"index":1}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [6] {"level":2}
[10] var:bound {"index":1}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [6] {"level":2}
  :scope -> [8] {"level":3}
[11] env
[12] env
  :capture -> [2] {"index":0}
[13] env
  :capture -> [4] {"index":0}
[14] env
  :capture -> [6] {"index":0}
[15] closure
  :body -> [2]
  :env -> [11]
[16] closure
  :body -> [4]
  :env -> [12]
[17] closure
  :body -> [6]
  :env -> [13]
[18] closure
  :body -> [8]
  :env -> [14]",
    "kind": "let",
    "mir": "",
    "name": "fst",
    "normalized": "λ(a: Type) =>
  (closure: λ(b: Type) =>
    (λ(x: a) ->
      (λ(y: b) -> x : Π(y: x) -> (closure: x -| Γ: y; x; fst)) : Π(x: b) ->
      (closure: Π(y: L2) -> x -| Γ: x; fst)) -| Γ: a)",
    "type": "Π(a: Type) => Π(b: Type) => Π(x: a) -> Π(y: b) -> a",
  },
]
`;

exports[`Language Tour — Polymorphism > let-polymorphism in blocks 1`] = `
[
  {
    "codegenJS": "",
    "elaborated": "λ(a: Type) =>
  {
    let innerID
      : Π(a: Type) => (closure: Π(x: a) -> a -| Γ: a; innerID; letpoly)
      = λ(a: Type) =>
        (λ(x: a) -> x : Π(x: innerID) ->
          (closure: innerID -| Γ: x; innerID; letpoly));
    let n : Num = innerID @Num 42;
    let s : String = innerID @String "hi";
    return n;
  }",
    "error": "Cannot read properties of undefined (reading 'type'); Cannot read properties of undefined (reading 'type'); Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures",
    "gram": "[1] root
  :entry -> [2]
[2] lambda {"variable":"a","icit":"Implicit","level":0}
  :annotation -> [3]
  :body -> [4]
  :env -> [24]
[3] lit {"value":{"type":"Atom","value":"Type"}}
[4] block
  :return -> [23]
  :stmt -> [5] {"index":0}
  :stmt -> [11] {"index":1}
  :stmt -> [17] {"index":2}
[5] stmt:let {"variable":"innerID"}
  :next -> [11]
  :value -> [6]
[6] lambda {"variable":"a","icit":"Implicit","level":2}
  :annotation -> [7]
  :body -> [8]
  :env -> [25]
[7] lit {"value":{"type":"Atom","value":"Type"}}
[8] lambda {"variable":"x","icit":"Explicit","level":3}
  :annotation -> [9]
  :body -> [10]
  :env -> [26]
[9] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [5] {"level":1}
  :scope -> [6] {"level":2}
[10] var:bound {"index":0}
  :refers_to -> [8]
  :scope -> [2] {"level":0}
  :scope -> [5] {"level":1}
  :scope -> [6] {"level":2}
  :scope -> [8] {"level":3}
[11] stmt:let {"variable":"n"}
  :next -> [17]
  :value -> [12]
[12] app {"icit":"Explicit"}
  :arg -> [16]
  :func -> [13]
[13] app {"icit":"Implicit"}
  :arg -> [15]
  :func -> [14]
[14] var:bound {"index":1}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [5] {"level":1}
  :scope -> [11] {"level":2}
[15] lit {"value":{"type":"Atom","value":"Num"}}
[16] lit {"value":{"type":"Num","value":42}}
[17] stmt:let {"variable":"s"}
  :value -> [18]
[18] app {"icit":"Explicit"}
  :arg -> [22]
  :func -> [19]
[19] app {"icit":"Implicit"}
  :arg -> [21]
  :func -> [20]
[20] var:bound {"index":2}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [5] {"level":1}
  :scope -> [11] {"level":2}
  :scope -> [17] {"level":3}
[21] lit {"value":{"type":"Atom","value":"String"}}
[22] lit {"value":{"type":"String","value":"hi"}}
[23] var:bound {"index":1}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [5] {"level":1}
  :scope -> [11] {"level":2}
  :scope -> [17] {"level":3}
[24] env
[25] env
[26] env
[27] closure
  :body -> [2]
  :env -> [24]
[28] closure
  :body -> [6]
  :env -> [25]
[29] closure
  :body -> [8]
  :env -> [26]",
    "kind": "let",
    "mir": "",
    "name": "letpoly",
    "normalized": "λ(a: Type) =>
  (closure: {
    let innerID
      : Π(a: Type) => (closure: Π(x: a) -> a -| Γ: a; innerID; letpoly)
      = λ(a: Type) =>
        (λ(x: a) -> x : Π(x: innerID) ->
          (closure: innerID -| Γ: x; innerID; letpoly));
    let n : Num = innerID @Num 42;
    let s : String = innerID @String "hi";
    return n;
  } -| Γ: a)",
    "type": "Π(a: Type) => Num",
  },
]
`;

exports[`Language Tour — Polymorphism > parametric polymorphism 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_9;
  return v0;
}

function closure_10(x) {
  return x;
}

function closure_9(a) {
  const v0 = closure_10;
  return v0;
}
return main();
",
    "elaborated": "λ(a: Type) -> λ(x: a) -> x",
    "gram": "[1] root
  :entry -> [2]
[2] lambda {"variable":"a","icit":"Explicit","level":0}
  :annotation -> [3]
  :body -> [4]
  :env -> [7]
[3] lit {"value":{"type":"Atom","value":"Type"}}
[4] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
  :env -> [8]
[5] var:bound {"index":0}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
[6] var:bound {"index":0}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
[7] env
[8] env
[9] closure
  :body -> [2]
  :env -> [7]
[10] closure
  :body -> [4]
  :env -> [8]",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_9
      return v0
  fn closure_10(x) entry=entry
    entry:
      return x
  fn closure_9(a) entry=entry
    entry:
      let v0 = &closure_10
      return v0",
    "name": "id",
    "normalized": "λ(a: Type) -> (closure: λ(x: a) -> x -| Γ: a)",
    "type": "Π(a: Type) -> Π(t1: a) -> a",
  },
  {
    "codegenJS": "",
    "elaborated": "λ(a: Type) -> λ(b: Type) -> λ(x: a) -> λ(y: b) -> x",
    "error": "Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures",
    "gram": "[1] root
  :entry -> [2]
[2] lambda {"variable":"a","icit":"Explicit","level":0}
  :annotation -> [3]
  :body -> [4]
  :env -> [11]
[3] lit {"value":{"type":"Atom","value":"Type"}}
[4] lambda {"variable":"b","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
  :env -> [12]
[5] lit {"value":{"type":"Atom","value":"Type"}}
[6] lambda {"variable":"x","icit":"Explicit","level":2}
  :annotation -> [7]
  :body -> [8]
  :env -> [13]
[7] var:bound {"index":1}
  :refers_to -> [2]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
[8] lambda {"variable":"y","icit":"Explicit","level":3}
  :annotation -> [9]
  :body -> [10]
  :env -> [14]
[9] var:bound {"index":1}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [6] {"level":2}
[10] var:bound {"index":1}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [4] {"level":1}
  :scope -> [6] {"level":2}
  :scope -> [8] {"level":3}
[11] env
[12] env
  :capture -> [2] {"index":0}
[13] env
  :capture -> [4] {"index":0}
[14] env
  :capture -> [6] {"index":0}
[15] closure
  :body -> [2]
  :env -> [11]
[16] closure
  :body -> [4]
  :env -> [12]
[17] closure
  :body -> [6]
  :env -> [13]
[18] closure
  :body -> [8]
  :env -> [14]",
    "kind": "let",
    "mir": "",
    "name": "const",
    "normalized": "λ(a: Type) -> (closure: λ(b: Type) -> λ(x: a) -> λ(y: b) -> x -| Γ: a)",
    "type": "Π(a: Type) -> Π(b: Type) -> Π(t2: a) -> Π(t3: b) -> a",
  },
]
`;
